--- a/find-us.html
+++ b/find-us.html
@@ -170,22 +170,28 @@
         </div>
 
 
-        <div class="page-10-percent orange-bg">
+        <div class="orange-bg">
             <div class="find-us-loc">
                 <div class="find-us-loc-text-title">
                     <h3>Visit Us</h3>
                 </div>
-                <div class="row">
+                <div class="row g-0">
                     <div class="col-md-4 find-us-loc-text">
-                        <h2>Address</h2> <br>
-                        <p8><b>Kok Fah Technology Farm Pte Ltd, <br> Singapore 698974</b></p8> <br>
-                        <p8>Mon to Fri</p8> <br>
-                        <p8>09:00 am to 05:00 pm</p8> <br><br> 
-                        <h2>Contact Us</h2> <br>
-                        <p8><b>Telephone</b></p8> <br>
-                        <p8>+65 8186 0985</p8> <br>
-                        <p8><b>Email</b></p8> <br>
-                        <p8>enquiries@kacaang.sg</p8> <br>
+                        <h4>Address</h4><br>
+                        <h6>3 Pemimpin Dr,</h6>
+                        <h6> Singapore 576147</h6>
+                        <br>
+                        <h6>Mon to Fri</h6>
+                        <h6>09:00 am to 05:00 pm</h6>
+                        <br>
+                        <h4 class="find-us-contact-us-text">Contact Us</h4>
+                        <br>
+                        <h6><b>Telephone</b></h6>
+                        <h6>+65 8186 0985</h6>
+                        <br>
+                        <h6><b>Email</b></h6>
+                        <h6>enquiries@kacaang.sg</h6>
+                        
                     </div>
                     <div class="google-map-warehouse col-md-8">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.707187396264!2d103.83749917933957!3d1.352241195115273!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da173da9e2ccc9%3A0x5abc873dd6c23391!2s3%20Pemimpin%20Dr%2C%20Singapore%20576147!5e0!3m2!1sen!2ssg!4v1700124926218!5m2!1sen!2ssg" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
