4 pages all done

--- a/find-us.html
+++ b/find-us.html
@@ -52,7 +52,7 @@
                     </button></a>
                     <div class="dropdown-content">
                         <a class="dropdown-item" href="shop.html" style="margin-top: 10px;">All Products</a>
-                        <a class="dropdown-item" href="#" style="margin-top: 10px;">On Sale</a>
+                        <a class="dropdown-item" href="shop.html#sales" style="margin-top: 10px;">On Sale</a>
                         <a class="dropdown-item" href="corporate.html" style="margin-top: 10px; margin-bottom: 10px;">Corporate Orders</a>
                     </div>
                 </div>
@@ -221,7 +221,7 @@
                 <div class="col-md-3 offset-md-1">
                     <a class="footer-link" href="about-us.html">OUR STORY</a> <br>
                     <a class="footer-link" href="farm.html">OUR FARM</a> <br>
-                    <a class="footer-link" href="#">CASHEW CRAZE CLUB</a> <br>
+                    <a class="footer-link" href="account.html">CASHEW CRAZE CLUB</a> <br>
                     <a class="footer-link" href="contact-us.html">CONTACT US</a> <br>
                     <div class="icons">
                         <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
@@ -253,7 +253,7 @@
                 <a class="mobile-footer-links" href="faqs.html">FAQS</a> <br>
                 <a class="mobile-footer-links" href="about-us.html">OUR STORY</a> <br>
                 <a class="mobile-footer-links" href="farm.html">OUR FARM</a> <br>
-                <a class="mobile-footer-links" href="#">CASHEW CRAZE CLUB</a> <br>
+                <a class="mobile-footer-links" href="account.html">CASHEW CRAZE CLUB</a> <br>
                 <a class="mobile-footer-links" href="contact-us.html">CONTACT US</a> <br>
                 <div class="icons">
                     <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
