--- a/reviews.html
+++ b/reviews.html
@@ -54,9 +54,9 @@
                         Shop
                     </button></a>
                     <div class="dropdown-content">
-                        <a class="dropdown-item" href="#" style="margin-top: 10px;">All Products</a>
-                        <a class="dropdown-item" href="#" style="margin-top: 10px;">On Sale</a>
-                        <a class="dropdown-item" href="#" style="margin-top: 10px; margin-bottom: 10px;">Corporate Orders</a>
+                        <a class="dropdown-item" href="shop.html" style="margin-top: 10px;">All Products</a>
+                        <a class="dropdown-item" href="shop.html#sales" style="margin-top: 10px;">On Sale</a>
+                        <a class="dropdown-item" href="corporate.html" style="margin-top: 10px; margin-bottom: 10px;">Corporate Orders</a>
                     </div>
                 </div>
                 <a class="nav-links" href="locate-us.html">Find Us</a>
@@ -93,10 +93,17 @@
     </div> 
     <div style="background-color: #3A2817; height: 10px; width: 100%;"></div>
 </div>
-
+    <!-- web banner -->
     <div class="reviews-banner">
-        <img src="images/favourite-singapore-snack-nuts-banner.png" alt="">
+        <img src="images/favourite-singapore-snack-nuts-banner-2.png" alt="">
     </div>
+
+    <!-- mobile banner -->
+    <div class="mobile-review-banner">
+        <img src="images/favourite-singapore-snack-nuts-banner-mobile.png" alt="">
+    </div>
+
+
     <div class="page-10-percent review-content">
 
         <!-- tab buttons -->
@@ -255,46 +262,6 @@
         </div>
         <!-- end of all tab contents -->
     </div>
-    <div class="reviews-features page-10-percent">
-        <h1>Also Featured On</h1>
-        <div class="row feature">
-            <div class="col-md-4 ">
-                <img src="images/prod-chilli-crab.png" alt="">
-                <h4>Title</h4>
-                <br>
-                <h6>12/12/2023</h6>
-                <br>
-                <h5>article preview blah blah lorem ipsum idk lololol helps i lazy search lorem ipsum ok enough</h5>
-                <br>
-                <a href=""><h6>Read More</h6></a>
-
-            </div>
-            <div class="col-md-4 ">
-                <img src="images/prod-chilli-crab.png" alt="">
-                <h4>Title</h4>
-                <br>
-                <h6>12/12/2023</h6>
-                <br>
-                <h5>article preview blah blah lorem ipsum idk lololol helps i lazy search lorem ipsum ok enough</h5>
-                <br>
-                <a href=""><h6>Read More</h6></a>
-
-            </div>
-            <div class="col-md-4 ">
-                <img src="images/prod-chilli-crab.png" alt="">
-                <h4>Title</h4>
-                <br>
-                <h6>12/12/2023</h6>
-                <br>
-                <h5>article preview blah blah lorem ipsum idk lololol helps i lazy search lorem ipsum ok enough</h5>
-                <br>
-                <a href=""><h6>Read More</h6></a>
-
-            </div>
-        </div>
-
-
-    </div>
 
     <!--web footer-->
     <div class="web-footer">
@@ -305,15 +272,14 @@
                 </div>
                 <div class="col-md-2 offset-md-1">
                     <a class="footer-link" href="shop.html">SHOP</a> <br>
-                    <a class="footer-link" href="shop.html">SALES</a> <br>
-                    <a class="footer-link" href="corporate.html">OCCASIONS</a> <br>
+                    <a class="footer-link" href="shop.html#sales">ON SALE</a> <br>
                     <a class="footer-link" href="corporate.html">CORPORATE</a> <br>
                     <a class="footer-link" href="faqs.html">FAQS</a>
                 </div>
                 <div class="col-md-3 offset-md-1">
                     <a class="footer-link" href="about-us.html">OUR STORY</a> <br>
                     <a class="footer-link" href="farm.html">OUR FARM</a> <br>
-                    <a class="footer-link" href="#">CASHEW CRAZE CLUB</a> <br>
+                    <a class="footer-link" href="account.html">CASHEW CRAZE CLUB</a> <br>
                     <a class="footer-link" href="contact-us.html">CONTACT US</a> <br>
                     <div class="icons">
                         <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
@@ -339,13 +305,12 @@
             <a href="index.html"><img class="kacaang-logo" src="images/logo.png">
             <div class="mobile-footer-links">
                 <a class="mobile-footer-links" href="shop.html">SHOP</a> <br>
-                <a class="mobile-footer-links" href="shop.html">PROMOTIONS</a> <br>
-                <a class="mobile-footer-links" href="corporate.html">OCCASIONS</a> <br>
+                <a class="mobile-footer-links" href="shop.html#sales">ON SALE</a><br>
                 <a class="mobile-footer-links" href="corporate.html">CORPORATE</a> <br>
                 <a class="mobile-footer-links" href="faqs.html">FAQS</a> <br>
                 <a class="mobile-footer-links" href="about-us.html">OUR STORY</a> <br>
                 <a class="mobile-footer-links" href="farm.html">OUR FARM</a> <br>
-                <a class="mobile-footer-links" href="#">CASHEW CRAZE CLUB</a> <br>
+                <a class="mobile-footer-links" href="account.html">CASHEW CRAZE CLUB</a> <br>
                 <a class="mobile-footer-links" href="contact-us.html">CONTACT US</a> <br>
                 <div class="icons">
                     <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
