added images for reviews

--- a/reviews.html
+++ b/reviews.html
@@ -118,7 +118,7 @@
         <div id="r-all" class="tabcontent reviews-tabcontent">
             <div class="row g-0 review-template">
                 <div class="col-md-4  review-template-img">
-                    <img src="images/reviews/review-1.png" alt="">
+                    <img src="images/reviews/customized-event-gift-party-nuts.png" alt="">
                 </div>
                 <div class="col-md-8  review-template-text">
                     <div class="review-text-content">
@@ -156,7 +156,24 @@
                 <div class="col-md-8  review-template-text">
                     <div class="review-text-content">
                         <img src="images/stars.png" alt="">
-                        <h4>Sarah Lee</h4>
+                        <h4>Mrs Lee</h4>
+                        <div class="review-tags"> <h6>Corporate</h6> </div>
+                        <h6 class="review-statements-h6">"Kacaang's nut mixes were a hit at our company anniversary. Guests raved about the unique flavors, and the custom packaging added a personal touch. Kudos for making our event extra special!"
+                        <br><br>
+                        29/10/2023
+                        </h6>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row g-0 review-template">
+                <div class="col-md-4  review-template-img">
+                    <img src="images/reviews/review-1.png" alt="">
+                </div>
+                <div class="col-md-8  review-template-text">
+                    <div class="review-text-content">
+                        <img src="images/stars.png" alt="">
+                        <h4>Sarah Chew</h4>
                         <div class="review-tags"> <h6>Club</h6> </div>
                         <h6 class="review-statements-h6">"As a health-conscious foodie, Kacaang is my snack haven. The locally sourced cashews and variety of flavors make it a guilt-free delight. Plus, the C^3 Membership adds that extra nutty incentive! Love the freshness and quality."
                         <br><br>
@@ -165,9 +182,61 @@
                     </div>
                 </div>
             </div>
+
             <div class="row g-0 review-template">
                 <div class="col-md-4  review-template-img">
                     <img src="images/reviews/review-1.png" alt="">
+                </div>
+                <div class="col-md-8  review-template-text">
+                    <div class="review-text-content">
+                        <img src="images/stars.png" alt="">
+                        <h4>Ahmad</h4>
+                        <div class="review-tags"> <h6>Club</h6> </div>
+                        <h6 class="review-statements-h6"> "Kacaang's nuts are my go-to for Netflix nights. The local flavors and freshness make it a truly Singaporean snacking experience. My favorites? All of them!"
+                        <br><br>
+                        23/09/2023
+                        </h6>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row g-0 review-template">
+                <div class="col-md-4  review-template-img">
+                    <img src="images/reviews/review-1.png" alt="">
+                </div>
+                <div class="col-md-8  review-template-text">
+                    <div class="review-text-content">
+                        <img src="images/stars.png" alt="">
+                        <h4>Janice Ng</h4>
+                        <div class="review-tags"> <h6>Celebrators</h6> </div>
+                        <h6 class="review-statements-h6">  "Kacaang's nuts added a touch of Singaporean flair to our wedding favors. The customized packs were a hit, and the guests loved the unique and thoughtful treat. Perfect for celebrating love!"
+                        <br><br>
+                        23/09/2023
+                        </h6>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row g-0 review-template">
+                <div class="col-md-4  review-template-img">
+                    <img src="images/reviews/review-1.png" alt="">
+                </div>
+                <div class="col-md-8  review-template-text">
+                    <div class="review-text-content">
+                        <img src="images/stars.png" alt="">
+                        <h4>Raj K.</h4>
+                        <div class="review-tags"> <h6>Club</h6> </div>
+                        <h6 class="review-statements-h6">"Kacaang's nuts are my go-to post-workout snack. The local touch and natural goodness keep me energized. A Singaporean snack that perfectly aligns with my fitness journey. Can't recommend it enough!"
+                        <br><br>
+                        17/08/2023
+                        </h6>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row g-0 review-template">
+                <div class="col-md-4  review-template-img">
+                    <img src="images/reviews/quality-bulk-order-office-snack-nuts.png" alt="">
                 </div>
                 <div class="col-md-8  review-template-text">
                     <div class="review-text-content">
@@ -209,7 +278,7 @@
                 <div class="col-md-8  review-template-text">
                     <div class="review-text-content">
                         <img src="images/stars.png" alt="">
-                        <h4>Sarah Lee</h4>
+                        <h4>Sarah Chew</h4>
                         <div class="review-tags"> <h6>Club</h6> </div>
                         <h6 class="review-statements-h6">"As a health-conscious foodie, Kacaang is my snack haven. The locally sourced cashews and variety of flavors make it a guilt-free delight. Plus, the C^3 Membership adds that extra nutty incentive! Love the freshness and quality."
                         <br><br>
@@ -219,12 +288,64 @@
                 </div>
             </div>
 
-        </div>
-
-        <div id="r-corporate" class="tabcontent reviews-tabcontent">
             <div class="row g-0 review-template">
                 <div class="col-md-4  review-template-img">
                     <img src="images/reviews/review-1.png" alt="">
+                </div>
+                <div class="col-md-8  review-template-text">
+                    <div class="review-text-content">
+                        <img src="images/stars.png" alt="">
+                        <h4>Ahmad</h4>
+                        <div class="review-tags"> <h6>Club</h6> </div>
+                        <h6 class="review-statements-h6"> "Kacaang's nuts are my go-to for Netflix nights. The local flavors and freshness make it a truly Singaporean snacking experience. My favorites? All of them!"
+                        <br><br>
+                        23/09/2023
+                        </h6>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row g-0 review-template">
+                <div class="col-md-4  review-template-img">
+                    <img src="images/reviews/review-1.png" alt="">
+                </div>
+                <div class="col-md-8  review-template-text">
+                    <div class="review-text-content">
+                        <img src="images/stars.png" alt="">
+                        <h4>Raj K.</h4>
+                        <div class="review-tags"> <h6>Club</h6> </div>
+                        <h6 class="review-statements-h6">"Kacaang's nuts are my go-to post-workout snack. The local touch and natural goodness keep me energized. A Singaporean snack that perfectly aligns with my fitness journey. Can't recommend it enough!"
+                        <br><br>
+                        17/08/2023
+                        </h6>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div id="r-corporate" class="tabcontent reviews-tabcontent">
+
+            <div class="row g-0 review-template">
+                <div class="col-md-4  review-template-img">
+                    <img src="images/reviews/review-1.png" alt="">
+                </div>
+                <div class="col-md-8  review-template-text">
+                    <div class="review-text-content">
+                        <img src="images/stars.png" alt="">
+                        <h4>Mrs Lee</h4>
+                        <div class="review-tags"> <h6>Corporate</h6> </div>
+                        <h6 class="review-statements-h6">"Kacaang's nut mixes were a hit at our company anniversary. Guests raved about the unique flavors, and the custom packaging added a personal touch. Kudos for making our event extra special!"
+                        <br><br>
+                        29/10/2023
+                        </h6>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row g-0 review-template">
+                <div class="col-md-4  review-template-img">
+                    <img src="images/reviews/quality-bulk-order-office-snack-nuts.png" alt="">
                 </div>
                 <div class="col-md-8  review-template-text">
                     <div class="review-text-content">
@@ -244,7 +365,7 @@
         <div id="r-celebrators" class="tabcontent reviews-tabcontent">
             <div class="row g-0 review-template">
                 <div class="col-md-4  review-template-img">
-                    <img src="images/reviews/review-1.png" alt="">
+                    <img src="images/reviews/customized-event-gift-party-nuts.png" alt="">
                 </div>
                 <div class="col-md-8  review-template-text">
                     <div class="review-text-content">
@@ -254,6 +375,23 @@
                         <h6 class="review-statements-h6">"Kacaang saved the day! As a party planner, I needed door gifts for an event, and Kacaang not only provided delicious and customizable nut mixes but also expedited the delivery to meet our tight schedule. The guests loved them! A lifesaver for any event planner."
                         <br><br>
                         16/11/2023
+                        </h6>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row g-0 review-template">
+                <div class="col-md-4  review-template-img">
+                    <img src="images/reviews/review-1.png" alt="">
+                </div>
+                <div class="col-md-8  review-template-text">
+                    <div class="review-text-content">
+                        <img src="images/stars.png" alt="">
+                        <h4>Janice Ng</h4>
+                        <div class="review-tags"> <h6>Celebrators</h6> </div>
+                        <h6 class="review-statements-h6">  "Kacaang's nuts added a touch of Singaporean flair to our wedding favors. The customized packs were a hit, and the guests loved the unique and thoughtful treat. Perfect for celebrating love!"
+                        <br><br>
+                        23/09/2023
                         </h6>
                     </div>
                 </div>
