--- a/chillicrab.html
+++ b/chillicrab.html
@@ -59,7 +59,7 @@
                         <a class="dropdown-item" href="corporate.html" style="margin-top: 10px; margin-bottom: 10px;">Corporate Orders</a>
                     </div>
                 </div>
-                <a class="nav-links" href="locate-us.html">Find Us</a>
+                <a class="nav-links" href="find-us.html">Find Us</a>
                 <a class="nav-links" href="contact-us.html">Contact Us</a>
                 <a class="nav-links" href="faqs.html">FAQs</a>
                 <a class="nav-links" href="reviews.html">Reviews</a>  
