--- a/shop.html
+++ b/shop.html
@@ -88,7 +88,7 @@
               <div class="accordion-body">
                   <a class="nav-links" href="about-us.html">About Us</a> <br>
                   <a class="nav-links" href="shop.html">Shop</a><br>
-                  <a class="nav-links" href="Find Us">Find Us</a><br>
+                  <a class="nav-links" href="find-us.html">Find Us</a><br>
                   <a class="nav-links" href="contact-us.html">Contact Us</a><br>
                   <a class="nav-links" href="faqs.html">FAQs</a><br>
                   <a class="nav-links" href="reviews.html">Reviews</a>
