--- a/cart.html
+++ b/cart.html
@@ -12,7 +12,7 @@
     crossorigin="anonymous"></script>
 
   <!--css-->
-  <link rel="stylesheet" href="css/yuwen.css">
+  <link rel="stylesheet" href="css/styles.css">
 
   <!--favicon-->
   <link rel="icon" type="image/x-icon" href="images/favicon.ico">
