all product pages + bundle of 3 page

--- a/bundle3.html
+++ b/bundle3.html
@@ -101,15 +101,15 @@
           <!-- 3 part grid starts here -->
           <!-- first column -->
           <div class="product-info-img">
-            <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png" alt="">
+            <img src="images/shop-products/best-lotus-biscoff-flavoured-cashews.png" alt="">
           </div>
           <!-- second column / empty column -->
           <!-- <div class=""></div> -->
           <!-- third column -->
           <div class="product-info-text">
             <div class="product-name-desc">
-                <h3>Chilli Crab Cashews</h3>
-                <h6>A bold tribute to Singapore's iconic dish, our Chilli Crab cashews are a perfect balance of spicy, sweet, and savoury. Indulge in the rich and vibrant flavours of this fan favourite, a must-have for every occasion.</h6>
+                <h3>Chocolate Cashews</h3>
+                <h6>Our chocolate-covered cashews are a decadent delight that will sweeten your life. Each nut is generously coated in fine, powdered chocolate, creating a perfect harmony of intense cocoa richness and the satisfying crunch of premium cashews.</h6>
             </div>
             <div class="ind-prod-review-line">
                 <p><img src="images/stars.png" alt=""> 1 review</p>
@@ -171,14 +171,8 @@
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
                             <a href="">
-                            <img src="images/shop-products/best-mala-flavoured-cashews.png"></a>
-                            <p>Ignite your taste buds with the fiery sensation of Mala.</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-4 col-4">
-                        <div>
-                            <a href=""><img src="images/shop-products/best-laksa-flavoured-cashews.png"></a>
-                            <p>Take a flavourful journey with our Laksa-infused cashews.</p>
+                            <img src="images/shop-products/best-flavoured-cashews-bundle-6.png"></a>
+                            <p>Indulge in our irresistible Biscoff-infused cashews.</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-4 col-4">
@@ -192,7 +186,20 @@
                         <div>
                             <a href="">
                             <img src="images/shop-products/best-salted-egg-cheese-flavoured-cashews.png"></a>
-                            <p>Indulge in the rich, savory allure of salted egg cashews.</p>
+                            <p>Indulge in the rich and creamy fusion of Salted Egg and Cheese.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-4 col-4">
+                        <div>
+                            <a href="">
+                            <img src="images/shop-products/best-black-pepper-flavoured-cashews.png"></a>
+                            <p>Savour the bold and aromatic kick of our Black Pepper cashews.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-4 col-4">
+                        <div>
+                            <a href=""><img src="images/shop-products/best-mala-flavoured-cashews"></a>
+                            <p>Ignite your taste buds with the fiery sensation of Mala.</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-4 col-4">
@@ -205,22 +212,15 @@
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
                             <a href="">
-                            <img src="images/shop-products/best-lotus-biscoff-flavoured-cashews.png"></a>
-                            <p>Indulge in our irresistible Biscoff-infused cashews.</p>
+                            <img src="images/shop-products/best-laksa-flavoured-cashews.png"></a>
+                            <p>Take a flavourful journey with our Laksa-infused cashews.</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
                             <a href="">
-                            <img src="images/shop-products/best-chocolate-flavoured-cashews.png"></a>
-                            <p>Our chocolate-covered cashews are a decadent delight that will sweeten your life.</p>
-                        </div>
-                    </div> 
-                    <div class="col-md-3 col-sm-4 col-4">
-                        <div>
-                            <a href="">
-                            <img src="images/shop-products/best-black-pepper-flavoured-cashews.png"></a>
-                            <p>Savour the bold and aromatic kick of our Black Pepper cashews.</p>
+                            <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png"></a>
+                            <p>A bold tribute to Singapore’s iconic chilli crab.</p>
                         </div>
                     </div>  
                 </div>
