--- a/blackpepper.html
+++ b/blackpepper.html
@@ -101,15 +101,15 @@
           <!-- 3 part grid starts here -->
           <!-- first column -->
           <div class="product-info-img">
-            <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png" alt="">
+            <img src="images/shop-products/best-black-pepper-flavoured-cashews.png" alt="">
           </div>
           <!-- second column / empty column -->
           <!-- <div class=""></div> -->
           <!-- third column -->
           <div class="product-info-text">
             <div class="product-name-desc">
-                <h3>Chilli Crab Cashews</h3>
-                <h6>A bold tribute to Singapore's iconic dish, our Chilli Crab cashews are a perfect balance of spicy, sweet, and savoury. Indulge in the rich and vibrant flavours of this fan favourite, a must-have for every occasion.</h6>
+                <h3>Black Pepper Cashews</h3>
+                <h6>Savour the bold and aromatic kick of our Black Pepper cashews. Seasoned with freshly ground black pepper, these nuts deliver a spicy zing that adds an exciting twist to your snacking experience.</h6>
             </div>
             <div class="ind-prod-review-line">
                 <p><img src="images/stars.png" alt=""> 1 review</p>
@@ -219,8 +219,8 @@
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
                             <a href="">
-                            <img src="images/shop-products/best-black-pepper-flavoured-cashews.png"></a>
-                            <p>Savour the bold and aromatic kick of our Black Pepper cashews.</p>
+                            <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png"></a>
+                            <p>A bold tribute to Singapore’s iconic chilli crab.</p>
                         </div>
                     </div>  
                 </div>
