--- a/laksa.html
+++ b/laksa.html
@@ -101,15 +101,15 @@
           <!-- 3 part grid starts here -->
           <!-- first column -->
           <div class="product-info-img">
-            <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png" alt="">
+            <img src="images/shop-products/best-laksa-flavoured-cashews.png" alt="">
           </div>
           <!-- second column / empty column -->
           <!-- <div class=""></div> -->
           <!-- third column -->
           <div class="product-info-text">
             <div class="product-name-desc">
-                <h3>Chilli Crab Cashews</h3>
-                <h6>A bold tribute to Singapore's iconic dish, our Chilli Crab cashews are a perfect balance of spicy, sweet, and savoury. Indulge in the rich and vibrant flavours of this fan favourite, a must-have for every occasion.</h6>
+                <h3>Laksa Cashews</h3>
+                <h6>Take a flavourful journey with our Laksa-infused cashews. Immerse yourself in the fragrant spices and coconut-y goodness, reminiscent of the famous Singaporean Laksa. It's a snack that you definitely must try.</h6>
             </div>
             <div class="ind-prod-review-line">
                 <p><img src="images/stars.png" alt=""> 1 review</p>
@@ -171,14 +171,21 @@
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
                             <a href="">
-                            <img src="images/shop-products/best-mala-flavoured-cashews.png"></a>
+                            <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png"></a>
+                            <p>A bold tribute to Singapore’s iconic chilli crab.</p>
+                        </div>
+                    </div> 
+                    <div class="col-md-3 col-sm-4 col-4">
+                        <div>
+                            <a href=""><img src="images/shop-products/best-mala-flavoured-cashews"></a>
                             <p>Ignite your taste buds with the fiery sensation of Mala.</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
-                            <a href=""><img src="images/shop-products/best-laksa-flavoured-cashews.png"></a>
-                            <p>Take a flavourful journey with our Laksa-infused cashews.</p>
+                            <a href="">
+                            <img src="images/shop-products/best-black-pepper-flavoured-cashews.png"></a>
+                            <p>Savour the bold and aromatic kick of our Black Pepper cashews.</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-4 col-4">
@@ -216,13 +223,6 @@
                             <p>Our chocolate-covered cashews are a decadent delight that will sweeten your life.</p>
                         </div>
                     </div> 
-                    <div class="col-md-3 col-sm-4 col-4">
-                        <div>
-                            <a href="">
-                            <img src="images/shop-products/best-black-pepper-flavoured-cashews.png"></a>
-                            <p>Savour the bold and aromatic kick of our Black Pepper cashews.</p>
-                        </div>
-                    </div>  
                 </div>
             </div>
         </div>
