--- a/saltedegg.html
+++ b/saltedegg.html
@@ -101,15 +101,15 @@
           <!-- 3 part grid starts here -->
           <!-- first column -->
           <div class="product-info-img">
-            <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png" alt="">
+            <img src="images/shop-products/best-salted-egg-cheese-flavoured-cashews.png" alt="">
           </div>
           <!-- second column / empty column -->
           <!-- <div class=""></div> -->
           <!-- third column -->
           <div class="product-info-text">
             <div class="product-name-desc">
-                <h3>Chilli Crab Cashews</h3>
-                <h6>A bold tribute to Singapore's iconic dish, our Chilli Crab cashews are a perfect balance of spicy, sweet, and savoury. Indulge in the rich and vibrant flavours of this fan favourite, a must-have for every occasion.</h6>
+                <h3>Salted Egg and Cheese Cashews</h3>
+                <h6>Indulge in the rich and creamy fusion of Salted Egg and Cheese. Our cashews are thoroughly coated with a velvety blend of salted egg yolk and cheese, creating a harmonious medley of savoury and cheesy goodness.</h6>
             </div>
             <div class="ind-prod-review-line">
                 <p><img src="images/stars.png" alt=""> 1 review</p>
@@ -171,14 +171,8 @@
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
                             <a href="">
-                            <img src="images/shop-products/best-mala-flavoured-cashews.png"></a>
-                            <p>Ignite your taste buds with the fiery sensation of Mala.</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-4 col-4">
-                        <div>
-                            <a href=""><img src="images/shop-products/best-laksa-flavoured-cashews.png"></a>
-                            <p>Take a flavourful journey with our Laksa-infused cashews.</p>
+                            <img src="images/shop-products/best-smoky-bbq-flavoured-cashews.png"></a>
+                            <p>Experience the hearty and smoky goodness of our BBQ-infused cashews.</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-4 col-4">
@@ -191,15 +185,21 @@
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
                             <a href="">
-                            <img src="images/shop-products/best-salted-egg-cheese-flavoured-cashews.png"></a>
-                            <p>Indulge in the rich, savory allure of salted egg cashews.</p>
+                            <img src="images/shop-products/best-laksa-flavoured-cashews.png"></a>
+                            <p>Take a flavourful journey with our Laksa-infused cashews.</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
                             <a href="">
-                            <img src="images/shop-products/best-smoky-bbq-flavoured-cashews.png"></a>
-                            <p>Experience the hearty and smoky goodness of our BBQ-infused cashews.</p>
+                            <img src="images/shop-products/best-black-pepper-flavoured-cashews.png"></a>
+                            <p>Savour the bold and aromatic kick of our Black Pepper cashews.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-4 col-4">
+                        <div>
+                            <a href=""><img src="images/shop-products/best-mala-flavoured-cashews"></a>
+                            <p>Ignite your taste buds with the fiery sensation of Mala.</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-4 col-4">
@@ -219,8 +219,8 @@
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
                             <a href="">
-                            <img src="images/shop-products/best-black-pepper-flavoured-cashews.png"></a>
-                            <p>Savour the bold and aromatic kick of our Black Pepper cashews.</p>
+                            <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png"></a>
+                            <p>A bold tribute to Singapore’s iconic chilli crab.</p>
                         </div>
                     </div>  
                 </div>
