--- a/shop.html
+++ b/shop.html
@@ -235,7 +235,7 @@
           <a href="chillicrab.html">
           <div class="shop-product">
             <img src="images/shop-products/best-flavoured-cashews-bundle-3.png" class="shop-product-img">
-            <h5> Bundle A</h5>
+            <h5> Triple Crunch Delight Bundle</h5>
             <div class="shop-review-line">
               <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
             </div>
@@ -247,7 +247,7 @@
           <a href="chillicrab.html">
           <div class="shop-product">
             <img src="images/shop-products/best-flavoured-cashews-bundle-6.png" class="shop-product-img">
-            <h5> Bundle B</h5>
+            <h5> Six-Pack Sensation Bundle</h5>
             <div class="shop-review-line">
               <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
             </div>
@@ -259,7 +259,7 @@
           <a href="chillicrab.html">
           <div class="shop-product">
             <img src="images/shop-products/best-flavoured-cashews-bundle-9.png" class="shop-product-img">
-            <h5> Bundle C</h5>
+            <h5> Nine-Nut Extravaganza Bundle</h5>
             <div class="shop-review-line">
               <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
             </div>
